sql的add和set操作改成使用预编译，防止特殊的字符造成的sql注入问题